--- a/Klike/Interfaces/ActivityFollowGroup.xib
+++ b/Klike/Interfaces/ActivityFollowGroup.xib
@@ -70,7 +70,7 @@
                         </variation>
                     </imageView>
                     <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="MHx-p9-Ibj" customClass="PFImageView">
-                        <rect key="frame" x="72" y="48" width="32" height="32"/>
+                        <rect key="frame" x="64" y="48" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="32" id="CTU-uf-QuF"/>
                             <constraint firstAttribute="width" constant="32" id="CUq-J2-mpV"/>
@@ -89,7 +89,7 @@
                         </variation>
                     </imageView>
                     <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="fEl-RF-kbO" customClass="PFImageView">
-                        <rect key="frame" x="128" y="48" width="32" height="32"/>
+                        <rect key="frame" x="112" y="48" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="32" id="5bz-0a-aAg"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="Oly-hm-F5w"/>
@@ -108,7 +108,7 @@
                         </variation>
                     </imageView>
                     <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="fh3-W6-iAp" customClass="PFImageView">
-                        <rect key="frame" x="184" y="48" width="32" height="32"/>
+                        <rect key="frame" x="160" y="48" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="7MP-cj-Lm5"/>
                             <constraint firstAttribute="height" constant="32" id="DA1-X8-Mul"/>
@@ -127,7 +127,7 @@
                         </variation>
                     </imageView>
                     <imageView userInteractionEnabled="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="2mS-U0-YZx" customClass="PFImageView">
-                        <rect key="frame" x="240" y="48" width="32" height="32"/>
+                        <rect key="frame" x="208" y="48" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="0Jn-9b-3FW"/>
                             <constraint firstAttribute="height" constant="32" id="Goj-eD-25F"/>
@@ -145,25 +145,6 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="gtd-TP-dkx" customClass="PFImageView">
-                        <rect key="frame" x="296" y="48" width="32" height="32"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="24" id="69S-jq-JMM"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="Axl-rc-1xi"/>
-                            <constraint firstAttribute="height" constant="24" id="Bt2-uz-12E"/>
-                            <constraint firstAttribute="height" constant="32" id="JuX-A5-aeM"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="Ssd-WF-lf2"/>
-                            <constraint firstAttribute="width" constant="32" id="fcB-e3-krj"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="69S-jq-JMM"/>
-                                <exclude reference="Axl-rc-1xi"/>
-                                <exclude reference="Bt2-uz-12E"/>
-                                <exclude reference="Ssd-WF-lf2"/>
-                            </mask>
-                        </variation>
-                    </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vNl-pd-le0">
                         <rect key="frame" x="0.0" y="88" width="320" height="8"/>
                         <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -171,6 +152,12 @@
                             <constraint firstAttribute="height" constant="8" id="Tn5-q2-hFt"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="11 people" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yhV-W9-gbL">
+                        <rect key="frame" x="250" y="57" width="54" height="14"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="0.70196078429999997" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="R4Y-Hi-E55" secondAttribute="trailing" id="05d-0P-n1M"/>
@@ -184,20 +171,21 @@
                     <constraint firstItem="vNl-pd-le0" firstAttribute="top" secondItem="hsb-Vz-3al" secondAttribute="bottom" constant="8" id="Hk6-jg-NLz"/>
                     <constraint firstItem="vNl-pd-le0" firstAttribute="top" secondItem="2mS-U0-YZx" secondAttribute="bottom" constant="8" id="Hxy-vt-I3i"/>
                     <constraint firstItem="jhi-qB-658" firstAttribute="baseline" secondItem="U09-4J-xkh" secondAttribute="baseline" id="MEr-Rf-r41"/>
-                    <constraint firstItem="vNl-pd-le0" firstAttribute="top" secondItem="gtd-TP-dkx" secondAttribute="bottom" constant="8" id="Pc6-O2-V3y"/>
+                    <constraint firstItem="yhV-W9-gbL" firstAttribute="trailing" secondItem="U09-4J-xkh" secondAttribute="trailing" id="Nxo-EH-kRA"/>
                     <constraint firstAttribute="bottom" secondItem="vNl-pd-le0" secondAttribute="bottom" id="RDr-NQ-bqF"/>
                     <constraint firstItem="U09-4J-xkh" firstAttribute="top" secondItem="gZi-zP-SpK" secondAttribute="top" constant="13" id="T4a-HA-SrB"/>
                     <constraint firstAttribute="trailing" secondItem="U09-4J-xkh" secondAttribute="trailing" constant="16" id="UtZ-1M-PgF"/>
+                    <constraint firstAttribute="trailing" secondItem="yhV-W9-gbL" secondAttribute="trailing" constant="16" id="VID-yU-KdR"/>
                     <constraint firstItem="U09-4J-xkh" firstAttribute="leading" secondItem="jhi-qB-658" secondAttribute="trailing" constant="5" id="X3t-AN-PaT"/>
-                    <constraint firstItem="gtd-TP-dkx" firstAttribute="leading" secondItem="2mS-U0-YZx" secondAttribute="trailing" constant="24" id="XRx-Ag-xeE"/>
-                    <constraint firstItem="fh3-W6-iAp" firstAttribute="leading" secondItem="fEl-RF-kbO" secondAttribute="trailing" constant="24" id="ZRK-hb-m8n"/>
+                    <constraint firstItem="fh3-W6-iAp" firstAttribute="leading" secondItem="fEl-RF-kbO" secondAttribute="trailing" constant="16" id="ZRK-hb-m8n"/>
                     <constraint firstItem="vNl-pd-le0" firstAttribute="top" secondItem="fEl-RF-kbO" secondAttribute="bottom" constant="8" id="ZZa-KS-exx"/>
                     <constraint firstItem="IDa-Kb-Gtc" firstAttribute="leading" secondItem="gZi-zP-SpK" secondAttribute="leading" constant="16" id="c8q-4C-ZYL"/>
-                    <constraint firstItem="2mS-U0-YZx" firstAttribute="leading" secondItem="fh3-W6-iAp" secondAttribute="trailing" constant="24" id="cGB-5e-P62"/>
+                    <constraint firstItem="2mS-U0-YZx" firstAttribute="leading" secondItem="fh3-W6-iAp" secondAttribute="trailing" constant="16" id="cGB-5e-P62"/>
+                    <constraint firstItem="yhV-W9-gbL" firstAttribute="centerY" secondItem="2mS-U0-YZx" secondAttribute="centerY" id="dnT-C0-evD"/>
                     <constraint firstItem="jhi-qB-658" firstAttribute="leading" secondItem="IDa-Kb-Gtc" secondAttribute="trailing" constant="8" id="fBU-w7-vZj"/>
                     <constraint firstItem="R4Y-Hi-E55" firstAttribute="top" secondItem="gZi-zP-SpK" secondAttribute="top" constant="40" id="fwj-CC-blF"/>
-                    <constraint firstItem="fEl-RF-kbO" firstAttribute="leading" secondItem="MHx-p9-Ibj" secondAttribute="trailing" constant="24" id="gM0-PG-Fg5"/>
-                    <constraint firstItem="MHx-p9-Ibj" firstAttribute="leading" secondItem="hsb-Vz-3al" secondAttribute="trailing" constant="24" id="hCH-Ob-Yvg"/>
+                    <constraint firstItem="fEl-RF-kbO" firstAttribute="leading" secondItem="MHx-p9-Ibj" secondAttribute="trailing" constant="16" id="gM0-PG-Fg5"/>
+                    <constraint firstItem="MHx-p9-Ibj" firstAttribute="leading" secondItem="hsb-Vz-3al" secondAttribute="trailing" constant="16" id="hCH-Ob-Yvg"/>
                     <constraint firstItem="U09-4J-xkh" firstAttribute="leading" secondItem="jhi-qB-658" secondAttribute="trailing" constant="10" id="iBR-Gy-1LM"/>
                     <constraint firstItem="jhi-qB-658" firstAttribute="leading" secondItem="hsb-Vz-3al" secondAttribute="trailing" constant="7" id="ohg-0J-lqh"/>
                     <constraint firstItem="vNl-pd-le0" firstAttribute="top" secondItem="gZi-zP-SpK" secondAttribute="top" priority="999" constant="88" id="pLO-On-0j3"/>
@@ -208,11 +196,13 @@
                     <mask key="constraints">
                         <exclude reference="5mS-aL-SyZ"/>
                         <exclude reference="ohg-0J-lqh"/>
+                        <exclude reference="VID-yU-KdR"/>
                         <exclude reference="X3t-AN-PaT"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="countLabel" destination="yhV-W9-gbL" id="xim-JJ-OKK"/>
                 <outlet property="descriptionLabel" destination="jhi-qB-658" id="Kck-YA-f6M"/>
                 <outlet property="timeLabel" destination="U09-4J-xkh" id="YAU-Wu-dAn"/>
                 <outlet property="userImageView" destination="IDa-Kb-Gtc" id="Hkg-8Q-CtN"/>
@@ -223,7 +213,6 @@
                 <outletCollection property="usersImages" destination="fEl-RF-kbO" id="joU-xy-MUg"/>
                 <outletCollection property="usersImages" destination="fh3-W6-iAp" id="gHY-xx-XLw"/>
                 <outletCollection property="usersImages" destination="2mS-U0-YZx" id="fsB-Kp-Mvr"/>
-                <outletCollection property="usersImages" destination="gtd-TP-dkx" id="NAX-DL-Thd"/>
             </connections>
             <point key="canvasLocation" x="309" y="34.5"/>
         </tableViewCell>
