--- a/Klike/Interfaces/CreatorCell.xib
+++ b/Klike/Interfaces/CreatorCell.xib
@@ -59,6 +59,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="Ubf-xO-wJn" secondAttribute="bottom" priority="999" constant="8" id="1ig-T4-RlJ"/>
                     <constraint firstItem="VH2-6O-iAK" firstAttribute="centerY" secondItem="Ubf-xO-wJn" secondAttribute="centerY" id="9gJ-lV-D9c"/>
@@ -85,6 +86,7 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="followButton" destination="VH2-6O-iAK" id="yvc-Ux-SH1"/>
                 <outlet property="userImageView" destination="Ubf-xO-wJn" id="aeW-EG-QBV"/>
