--- a/Klike/Interfaces/CreateCardView.xib
+++ b/Klike/Interfaces/CreateCardView.xib
@@ -33,7 +33,7 @@
                         <constraint firstAttribute="width" constant="130" id="cwl-9O-MGH"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
                     <connections>
                         <outlet property="delegate" destination="iN0-l3-epB" id="Zoc-BW-i8g"/>
                     </connections>
@@ -48,7 +48,7 @@
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MrU-q0-l79" customClass="SFTextField">
                     <rect key="frame" x="178" y="84" width="100" height="17"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                     <connections>
                         <outlet property="delegate" destination="iN0-l3-epB" id="7Or-hA-hwc"/>
                     </connections>
@@ -73,7 +73,7 @@
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dZJ-ld-9oC" customClass="SFTextField">
                     <rect key="frame" x="16" y="30" width="258" height="17"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
                     <connections>
                         <outlet property="delegate" destination="iN0-l3-epB" id="O2d-9i-BB7"/>
                     </connections>
