--- a/Klike/Sources/Controllers/KLExploreTopUserView.xib
+++ b/Klike/Sources/Controllers/KLExploreTopUserView.xib
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="0jC-cU-Ota" customClass="KLExploreTopUserView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="184"/>
+            <rect key="frame" x="0.0" y="-1" width="320" height="218"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_pic_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="nqq-mB-WOG" userLabel="userPhoto" customClass="PFImageView">
-                    <rect key="frame" x="13" y="16" width="56" height="56"/>
+                    <rect key="frame" x="13" y="50" width="56" height="56"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="56" id="AxB-ko-Pdb"/>
                         <constraint firstAttribute="height" constant="56" id="iUY-JU-nlc"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Christofer Riot" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBm-Yd-cSb" userLabel="userName">
-                    <rect key="frame" x="88" y="28" width="117" height="17"/>
+                    <rect key="frame" x="88" y="62" width="117" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="kif-ft-0bT"/>
                     </constraints>
@@ -27,7 +27,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Amg-DK-6t5">
-                    <rect key="frame" x="220" y="25" width="85" height="24"/>
+                    <rect key="frame" x="220" y="59" width="85" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="27" id="3DQ-DS-lBf"/>
                         <constraint firstAttribute="width" constant="85" id="Cfp-wq-tkV"/>
@@ -48,7 +48,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="334" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QoP-MX-hHG">
-                    <rect key="frame" x="88" y="47" width="21" height="21"/>
+                    <rect key="frame" x="88" y="81" width="21" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="emy-eD-Nnc"/>
                     </constraints>
@@ -57,7 +57,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="events" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7M-t2-I3Q">
-                    <rect key="frame" x="111" y="47" width="37" height="21"/>
+                    <rect key="frame" x="111" y="81" width="37" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="xx7-3p-YGd"/>
                     </constraints>
@@ -66,14 +66,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="explore_slash" translatesAutoresizingMaskIntoConstraints="NO" id="tzA-jz-glk">
-                    <rect key="frame" x="150" y="48" width="12" height="20"/>
+                    <rect key="frame" x="150" y="82" width="12" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="12" id="UxM-9Q-cDs"/>
                         <constraint firstAttribute="height" constant="20" id="gqT-ot-QgX"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1,2k" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cBh-Pj-SN2">
-                    <rect key="frame" x="165" y="47" width="24" height="21"/>
+                    <rect key="frame" x="165" y="81" width="24" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="jh2-8r-8hf"/>
                     </constraints>
@@ -82,7 +82,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="followers" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4W-XI-isp">
-                    <rect key="frame" x="191" y="47" width="51" height="21"/>
+                    <rect key="frame" x="191" y="81" width="51" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="YOh-x3-dyd"/>
                     </constraints>
@@ -91,7 +91,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Re8-zd-6Us">
-                    <rect key="frame" x="0.0" y="72" width="320" height="112"/>
+                    <rect key="frame" x="0.0" y="106" width="320" height="112"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="112" id="PPb-Gf-LAB"/>
@@ -107,35 +107,42 @@
                         <outlet property="delegate" destination="0jC-cU-Ota" id="pxe-jE-2kU"/>
                     </connections>
                 </collectionView>
+                <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="xlL-KL-HM3">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="tzA-jz-glk" firstAttribute="leading" secondItem="y7M-t2-I3Q" secondAttribute="trailing" constant="2" id="2YZ-Wa-6eb"/>
+                <constraint firstItem="cBh-Pj-SN2" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="37" id="3T9-fB-Vu1"/>
                 <constraint firstItem="cBh-Pj-SN2" firstAttribute="leading" secondItem="tzA-jz-glk" secondAttribute="trailing" constant="3" id="3zw-NV-dbx"/>
                 <constraint firstItem="y7M-t2-I3Q" firstAttribute="leading" secondItem="QoP-MX-hHG" secondAttribute="trailing" constant="2" id="4pU-cf-qC5"/>
-                <constraint firstItem="aBm-Yd-cSb" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="28" id="7ai-mx-d13"/>
+                <constraint firstItem="y7M-t2-I3Q" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="37" id="6Wu-3g-4ho"/>
                 <constraint firstItem="nqq-mB-WOG" firstAttribute="leading" secondItem="0jC-cU-Ota" secondAttribute="leading" constant="13" id="BqT-ai-j8f"/>
+                <constraint firstItem="xlL-KL-HM3" firstAttribute="leading" secondItem="0jC-cU-Ota" secondAttribute="leading" id="Byv-wV-nrh"/>
+                <constraint firstItem="QoP-MX-hHG" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="37" id="CP2-6B-kzU"/>
                 <constraint firstItem="Amg-DK-6t5" firstAttribute="leading" secondItem="aBm-Yd-cSb" secondAttribute="trailing" constant="5" id="Cpi-uB-yQt"/>
-                <constraint firstItem="y7M-t2-I3Q" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="47" id="Dcq-C2-x7p"/>
-                <constraint firstItem="nqq-mB-WOG" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="16" id="Dvx-S2-gNZ"/>
                 <constraint firstItem="y7M-t2-I3Q" firstAttribute="leading" secondItem="QoP-MX-hHG" secondAttribute="trailing" constant="8" id="Fnl-wj-heN"/>
                 <constraint firstAttribute="trailing" secondItem="aBm-Yd-cSb" secondAttribute="trailing" constant="115" id="OCV-kj-mK2"/>
-                <constraint firstItem="cBh-Pj-SN2" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="47" id="Oz6-xO-cLw"/>
                 <constraint firstAttribute="trailing" secondItem="Amg-DK-6t5" secondAttribute="trailing" constant="15" id="Rhn-q2-pUB"/>
                 <constraint firstAttribute="centerX" secondItem="y7M-t2-I3Q" secondAttribute="centerX" constant="32.5" id="Tg9-NG-S8K"/>
                 <constraint firstItem="Amg-DK-6t5" firstAttribute="centerY" secondItem="nqq-mB-WOG" secondAttribute="centerY" id="Up0-XX-phL"/>
-                <constraint firstItem="I4W-XI-isp" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="47" id="VPt-Kz-WDm"/>
+                <constraint firstAttribute="trailing" secondItem="xlL-KL-HM3" secondAttribute="trailing" id="W8Q-Nh-tNl"/>
                 <constraint firstItem="aBm-Yd-cSb" firstAttribute="leading" secondItem="nqq-mB-WOG" secondAttribute="trailing" constant="19" id="XhT-Cv-YQ5"/>
                 <constraint firstAttribute="bottom" secondItem="Re8-zd-6Us" secondAttribute="bottom" id="Yx0-By-ot7"/>
                 <constraint firstAttribute="trailing" secondItem="Re8-zd-6Us" secondAttribute="trailing" id="ajX-mr-ul0"/>
+                <constraint firstItem="aBm-Yd-cSb" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="18" id="an4-UJ-JsP"/>
                 <constraint firstItem="I4W-XI-isp" firstAttribute="leading" secondItem="cBh-Pj-SN2" secondAttribute="trailing" constant="2" id="cDw-WO-cXi"/>
+                <constraint firstItem="I4W-XI-isp" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="37" id="dz6-z2-hnW"/>
                 <constraint firstItem="Re8-zd-6Us" firstAttribute="leading" secondItem="0jC-cU-Ota" secondAttribute="leading" id="h8l-kn-TWI"/>
                 <constraint firstItem="aBm-Yd-cSb" firstAttribute="leading" secondItem="nqq-mB-WOG" secondAttribute="trailing" constant="8" id="ish-gB-f6E"/>
-                <constraint firstItem="Amg-DK-6t5" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="25" id="nfM-8P-OgY"/>
-                <constraint firstItem="QoP-MX-hHG" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="47" id="pJW-Bx-OyP"/>
+                <constraint firstItem="nqq-mB-WOG" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="6" id="kK1-3X-6Nn"/>
+                <constraint firstItem="Amg-DK-6t5" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="15" id="mfh-La-hw7"/>
                 <constraint firstItem="QoP-MX-hHG" firstAttribute="leading" secondItem="nqq-mB-WOG" secondAttribute="trailing" constant="19" id="tm5-7a-Uy6"/>
+                <constraint firstItem="tzA-jz-glk" firstAttribute="top" secondItem="xlL-KL-HM3" secondAttribute="bottom" constant="38" id="uFg-gm-pQD"/>
                 <constraint firstItem="aBm-Yd-cSb" firstAttribute="centerY" secondItem="nqq-mB-WOG" secondAttribute="centerY" id="uzD-mp-wbN"/>
-                <constraint firstItem="tzA-jz-glk" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" constant="48" id="yW6-bw-4Pk"/>
+                <constraint firstItem="xlL-KL-HM3" firstAttribute="top" secondItem="0jC-cU-Ota" secondAttribute="top" id="yZi-wA-045"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -158,8 +165,9 @@
                 <outlet property="_labelFollowersNumber" destination="cBh-Pj-SN2" id="bnZ-Pi-edg"/>
                 <outlet property="_labelFollowersText" destination="I4W-XI-isp" id="TAw-9w-bMT"/>
                 <outlet property="_labelName" destination="aBm-Yd-cSb" id="VN5-W3-o5d"/>
+                <outlet property="searchBar" destination="xlL-KL-HM3" id="cHL-Mf-a0Q"/>
             </connections>
-            <point key="canvasLocation" x="344" y="366"/>
+            <point key="canvasLocation" x="280" y="184"/>
         </view>
     </objects>
     <resources>
