--- a/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
@@ -12,7 +12,7 @@
             <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HZn-E6-lVa" id="HJ8-cJ-d3I">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GRL-sC-lzq">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GRL-sC-lzq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Citibank XXXX-1234" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6TG-Dd-Djo">
@@ -79,13 +79,19 @@
                             <constraint firstItem="Z3k-fh-DL0" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="25" id="UZj-XP-F5t"/>
                             <constraint firstItem="J7o-Hc-dlN" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" id="UhG-K4-0M7"/>
                             <constraint firstItem="MrK-y4-mGC" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="hpj-ha-xoJ"/>
+                            <constraint firstItem="4Fb-YN-Za5" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="112" id="img-sI-PfP"/>
                             <constraint firstItem="4Fb-YN-Za5" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="uTR-1G-bIU"/>
                             <constraint firstAttribute="trailing" secondItem="J7o-Hc-dlN" secondAttribute="trailing" id="x7k-Qx-Z6k"/>
                             <constraint firstAttribute="bottom" secondItem="MrK-y4-mGC" secondAttribute="bottom" id="x97-tW-xwn"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="NMS-AP-aZs"/>
+                            </mask>
+                        </variation>
                     </view>
                 </subviews>
-                <color key="backgroundColor" red="0.011764705882352941" green="0.53333333333333333" blue="0.65098039215686276" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="GRL-sC-lzq" firstAttribute="top" secondItem="HJ8-cJ-d3I" secondAttribute="top" id="Q4I-He-5S9"/>
                     <constraint firstAttribute="trailing" secondItem="GRL-sC-lzq" secondAttribute="trailing" id="Z2g-VF-CTB"/>
@@ -93,6 +99,7 @@
                     <constraint firstAttribute="bottom" secondItem="GRL-sC-lzq" secondAttribute="bottom" constant="-2" id="pPn-gj-3UV"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="_buttonClose" destination="J7o-Hc-dlN" id="lzh-uO-PpR"/>
                 <outlet property="_collectionCards" destination="4Fb-YN-Za5" id="duG-gR-vds"/>
@@ -100,6 +107,7 @@
                 <outlet property="_constraintCellH" destination="4jt-ep-Ucz" id="ljh-c6-JTx"/>
                 <outlet property="_labelCardNumber" destination="6TG-Dd-Djo" id="1zI-km-FhP"/>
                 <outlet property="_pages" destination="MrK-y4-mGC" id="sg7-6H-u0E"/>
+                <outlet property="_viewContent" destination="GRL-sC-lzq" id="4nJ-ew-ehb"/>
                 <outlet property="_viewInputContent" destination="Z3k-fh-DL0" id="fuW-lf-9fA"/>
             </connections>
             <point key="canvasLocation" x="181" y="287.5"/>
